# augmenta

./: .env  .gitignore  README.md  pyproject.toml  rate_limiter_plan.md  setup.py
.github/workflows/: publish.yml  test.yml
augmenta/: agent.py  augmenta.py  cli.py
augmenta/agents/: __init__.py  agent.py  autonomous_agent.py  base.py  base_agent.py  fixed_agent.py
augmenta/cache/: __init__.py  database.py  manager.py  models.py  process.py
augmenta/config/: read_config.py
augmenta/core/: __init__.py  augmenta.py  cache.py  extract_text.py  llm.py  prompt.py  search.py  utils.py
augmenta/core/cache/: __init__.py  database.py  manager.py  models.py  process.py
augmenta/core/config/: __init__.py  credentials.py
augmenta/core/extractors/: __init__.py  base.py  extractor.py  factory.py  trafilatura.py
augmenta/core/llm/: __init__.py  agent.py  base.py  factory.py  instructor_handler.py  llm_client.py  models.py  provider.py  validation.py
augmenta/core/prompt/: __init__.py  formatter.py  (+5 more)
augmenta/tools/: __init__.py  extractors.py  mcp.py  search_web.py  visit_webpages.py
augmenta/utils/: logging.py  prompt_formatter.py  utils.py  validators.py
docs/: agent.md  cache.md  logging.md  prompt.md  search.md  tools.md
review/: Code.gs  Index.html  README.md
tests/: __init__.py  example-config.yaml  test-data-input.csv  test-data-output.csv
tests/cop/: cop-classification.yaml  test-data-input.csv  test_augmenta.py
tests/orcl/: orcl-classification.yaml  orcl-output.csv  orcl-standardised.csv  orcl.csv
tests/tools/: test_visit_webpages.py
(+48 files in other folders)
